--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,7 @@ body {
     color var(--transition-speed);
 }
 
+/*
 h1,
 h2,
 h3,
@@ -26,12 +27,13 @@ h5,
 h6 {
   font-family: var(--font-secondary);
   color: var(--violet-jtc);
-}
+}*/
 
+/*
 p {
   line-height: 1.6;
   margin-bottom: 1.5rem;
-}
+}*/
 
 a {
   color: var(--dark-purple);
@@ -92,4 +94,45 @@ input:focus,
 textarea:focus {
   border-color: var(--tea-green);
   outline: none;
+}
+
+/* Font sizes only!*/
+/* Default font sizes (for small screens) */
+.global-title {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+.global-subtitle {
+  font-size: 0.8rem;
+}
+.global-text {
+  font-size: 0.7rem;
+}
+
+/* Medium screens (md: 768px and above) */
+@media (min-width: 768px) {
+  .global-title {
+    font-size: 1rem; /* Rem unit scales with the root font size */
+    font-weight: 600;
+  }
+  .global-subtitle {
+    font-size: 1rem;
+  }
+  .global-text {
+    font-size: 0.8rem;
+  }
+}
+
+/* Large screens (lg: 1024px and above) */
+@media (min-width: 1024px) {
+  .global-title {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+  .global-subtitle {
+    font-size: 1.2rem;
+  }
+  .global-text {
+    font-size: 1rem;
+  }
 }
